<resources>
    <string name="app_name">MyTweet</string>
    <string name="tweetButton">Tweet</string>
    <string name="charCounter">140</string>
    <string name="selectContactButton">Select Contact</string>
    <string name="emailTweetButton">Email Tweet Via</string>
    <string name="title_activity_login">Sign in</string>
    <string name="loginTitle">Enter you email and password</string>
    <string name="loginSubtitle">You must be registered</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="signinButton">Sign in</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="registerButton">Register</string>
    <string name="welcomeTitle">Welcome to MyTweet</string>
    <string name="welcomeSubtitle">See whats happening in the great WIT world right now</string>
    <string name="signupButton">Sign up</string>
    <string name="loginButton">Login</string>
    <string name="tweetText_hint">Whats on your mind?</string>
    <string name="new_tweet">New Tweet</string>
    <string name="settings">Settings</string>
    <string name="tweet_email_subject">My Latest Tweet!</string>
    <string name="timeline_label">Timeline</string>
    <string name="tweet_label">Tweet</string>
    <string name="signup_label">Signup</string>
    <string name="login_label">Login</string>
    <string name="delete_tweet">Delete Tweet</string>
    <string name="menuLogout">Logout</string>
    <string name="email_summary">Please enter your email</string>
    <string name="email">Email</string>
    <string name="password_summary">You may set your password here</string>
    <string name="password">Password</string>
    <string name="firstName_summary">Please enter your First Name</string>
    <string name="settingsFirstName">First Name</string>
    <string name="lastName_summary">Please enter your Last Name</string>
    <string name="settingsLastName">Last Name</string>
    <string name="nmr_tweets">Configure Downloads</string>
    <string name="nmr_tweets_summary">How many Tweets to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
    <string name="clearAll">Clear All</string>
    <string name="users">MyTweet Users</string>
    <string name="follow">Follow</string>
    <string name="user">Users</string>
    <string name="userFollowsTimeline">User Following Timeline</string>
    <string name="personalTimeline">Personal Timeline</string>
</resources>
