<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference
        android:key="email"
        android:summary="@string/email_summary"
        android:title="@string/email"/>

    <EditTextPreference
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password"
        android:inputType="textPassword"/>

    <EditTextPreference
        android:key="nmr_tweets"
        android:summary="@string/nmr_tweets_summary"
        android:title="@string/nmr_tweets"
        android:inputType="text"/>

    <EditTextPreference
        android:key="refresh_interval"
        android:summary="@string/set_refresh_interval_summary"
        android:title="@string/set_refresh_interval"
        android:inputType="text"/>

</PreferenceScreen>