<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menuLogout"
        android:orderInCategory="100"
        android:title="@string/menuLogout"/>

    <item
        android:id="@+id/user"
        android:orderInCategory="100"
        android:title="@string/user" />

    <item
        android:id="@+id/personalTimeline"
        android:orderInCategory="100"
        android:title="@string/personalTimeline" />

    <item
        android:id="@+id/userFollowsTimeline"
        android:orderInCategory="100"
        android:title="@string/userFollowsTimeline" />

</menu>