<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.mytweet.activities.TweetActivity">

    <TextView
        android:id="@+id/charCounter"
        android:layout_width="34dp"
        android:layout_height="22dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/ivory"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/charCounter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/tweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweetButton"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/tweetText"
        android:layout_width="335dp"
        android:layout_height="242dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/ivory"
        android:gravity="top"
        android:ems="10"
        android:hint="@string/tweetText_hint"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tweetButton"
        app:layout_constraintHorizontal_bias="0.476" />

    <TextView
        android:id="@+id/tweetDate"
        android:layout_width="362dp"
        android:layout_height="35dp"
        android:text="TextView"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tweetText"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/selectContact"
        android:layout_width="348dp"
        android:layout_height="43dp"
        android:layout_marginTop="17dp"
        android:text="@string/selectContactButton"
        app:layout_constraintTop_toBottomOf="@+id/tweetDate"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="379dp"
        app:layout_constraintHorizontal_bias="0.523" />

    <Button
        android:id="@+id/emailTweet"
        android:layout_width="347dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:text="@string/emailTweetButton"
        app:layout_constraintTop_toBottomOf="@+id/selectContact"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
